--- a/index.ejs
+++ b/index.ejs
@@ -7,7 +7,7 @@
 
   // Symple client options
   CLIENT_OPTIONS = {
-    url: 'http://localhost:<%- port %>',
+    url: 'http://openofficehours.herokuapp.com<%- port %>',
     //url: 'http://sympleserver.sourcey.com:<%- port %>',
     token: <%- token %>,
     peer: <%- JSON.stringify(peer) %>
